[package]
name = "betting_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "betting_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]



[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "=0.3.5"
solana-program = "1.18.18"
spl-token-group-interface = "=0.2.5"
bytemuck = "1.21.0"
spl-associated-token-account = { version = "3.0.4", features = ["no-entrypoint"] } 

